# tolc

./: .ai  .gitignore  AI.md  CLAUDE.md  Cargo.toml  README.md  VISION.md  alignment.md  coverage.md  gen_rt.py  paper.md  run_java_suite.sh  test_field_generation.rs  test_simple.rs
src/: classpath.txt  config.rs  consts.rs  error.rs  lib.rs  rt.rs
src/ast/: mod.rs  nodes.rs  printer.rs  visitor.rs
src/codegen/: advanced_optimizer.rs  annotation.rs  array_access_optimizer.rs  array_type_info.rs  assignment_optimizer.rs  attr.rs  attr_optimizer.rs  attribute.rs  branch_marker.rs  branch_optimizer.rs  bytecode.rs  bytecode_optimized.rs  cast_optimizer.rs  chain.rs  class.rs  class_writer.rs  classpath.rs  code.rs  code_compactor.rs  complexity_analyzer.rs  cond_item.rs  conditional_optimizer.rs  const_fold.rs  const_fold_javac.rs  constant_optimizer.rs  constpool.rs  constpool_optimized.rs  defs.rs  descriptor.rs  dynamic_class_loader.rs  enhanced_stack_map_emitter.rs  enhanced_string_optimizer.rs  enhanced_type_resolution.rs  enter.rs  error.rs  exception_optimizer.rs  fatcode_manager.rs  field.rs  (+58 more)
tests/: MinimalTest.java  SimpleConstantTest.java  accessibility_cross_package_tests.rs  advanced_optimizer_integration_tests.rs  alignment_tests.rs  annotation_placement_tests.rs  annotations_tests.rs  blank_final_da_tests.rs  classpath_tests.rs  common.rs  comprehensive_expressions_tests.rs  const_folding_long_parity_tests.rs  const_folding_mixed_relational_tests.rs  const_folding_tests.rs  constant_folding_logical_tests.rs  control_flow_tests.rs  enhanced_conditional_tests.rs  error_recovery_tests.rs  expression_edge_cases_tests.rs  expressions_tests.rs  helloworld_tests.rs  high_priority_features_test.rs  inmemory_compilation_tests.rs  java_class_focus.rs  java_suite.rs  java_suite_ordered.rs  javac_alignment_tests.rs  javac_assign_item_tests.rs  javac_cond_item_tests.rs  javac_constant_folding_tests.rs  javac_iinc_optimizer_tests.rs  javac_immediate_item_tests.rs  javac_indexed_item_tests.rs  javac_jump_chain_tests.rs  javac_register_allocation_tests.rs  javac_stack_item_tests.rs  jump_chain_tests.rs  labeled_loop_tests.rs  lexer_tests.rs  member_invoke_tests.rs  (+60 more)
tips/: TIP00001.md  TIP00002.md
(+318 files in other folders)
