[package]
name = "tolc"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Terminos Language Compiler - A Java8-compatible compiler written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/tolc"
keywords = ["compiler", "java", "terminos", "language"]
categories = ["development-tools", "compilers"]

[dependencies]
# Core dependencies
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parser related
logos = "0.13"
peg = "0.8"

# AST and code generation
walkdir = "0.1"
tempfile = "3.8"

# Logging and error handling
log = "0.4"
env_logger = "0.10"
once_cell = "1.19"

# Testing related
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
pretty_assertions = "1.4"





[lib]
name = "tolc"
path = "src/lib.rs"

[[bin]]
name = "tolc"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
